# webgraph-rs

./: .gitignore  .mailmap  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  back.csv  bar.py  build.rs  cnr-2000-llp  code_tables_generator.py  code_tables_pgo.py  code_tables_plot.py  code_tables_study.py  code_tables_study_write.py  coverage.py  flake.nix  grid.py  harmonic.zstd  lcov.info  pipeline.sh  plot.py  results.csv  t.graph  t.properties  test.graph  x.py
algo/: CHANGELOG.md  Cargo.toml  README.md
algo/src/: acyclicity.rs  lib.rs  top_sort.rs
algo/src/distances/: hyperball.rs  mod.rs
algo/src/distances/exact_sum_sweep/: computer.rs  level.rs  mod.rs  output.rs  output_symm.rs  outputs.rs  outputs_symm.rs  scc_graph.rs
algo/src/llp/: gap_cost.rs  label_store.rs  mix64.rs  mod.rs  preds.rs  sync_llp.rs
algo/src/rank/: birank.rs  mod.rs  pagerank.rs
algo/src/sccs/: kosaraju.rs  mod.rs  symm_par.rs  symm_seq.rs  tarjan.rs
algo/src/utils/: argmax.rs  argmin.rs  argminmax.rs  mod.rs
algo/src/visits/: mod.rs
algo/src/visits/breadth_first/: mod.rs  par_fair.rs  par_low_mem.rs  seq.rs
algo/src/visits/depth_first/: mod.rs  seq.rs
algo/tests/: test_acyc_top_sort.rs  test_asyc_top_sort.rs  test_birank.rs  test_breadth_first.rs  test_coverage.rs  test_depth_first.rs  test_ess_coverage.rs  test_exact_sum_sweep.rs  test_llp.rs  test_llp_preds.rs  test_math.rs  test_pagerank.rs  test_sccs.rs  test_sccs_coverage.rs
bash/: gen_test_ef_dcf.sh  test_32.sh
benches/: codes.rs
benchmarks/: Cargo.toml
benchmarks/src/: data.rs  main.rs  metrics.rs  rdtsc.rs  utils.rs
c/: mph.c  mph.h
cli/: CHANGELOG.md  Cargo.toml  README.md  build.rs
cli/src/: common_env.txt  common_ps.txt  lib.rs  main.rs  sccs.rs
cli/src/analyze/: codes.rs  mod.rs  stats.rs
cli/src/bench/: bf_visit.rs  bf_visit2.rs  bvgraph.rs  mod.rs
cli/src/check/: ef.rs  eq.rs  maxref.rs  mod.rs  symm.rs
cli/src/from/: arcs.rs  mod.rs
cli/src/perm/: bfs.rs  comp.rs  mod.rs  rand.rs
cli/src/rank/: birank.rs  mod.rs  pagerank.rs
cli/src/run/: llp.rs  llp_combine.rs  mod.rs  pad.rs  sllp.rs
cli/src/seq/: float.rs  int.rs  mod.rs
cli/src/to/: arcs.rs  ascii.rs  bvgraph.rs  csr.rs  endianness.rs  mod.rs
cli/src/transform/: map.rs  mod.rs  perm.rs  simplify.rs  symmetrize.rs  transpose.rs
cli/tests/: test_llp_pipeline.rs  test_slice_formats.rs
data/: .gitignore  cnr-2000-hc.ef  cnr-2000-t.dcf  cnr-2000-t.ef  cnr-2000-t.offsets  cnr-2000-t.properties  cnr-2000.dcf  cnr-2000.ef  cnr-2000.graph  cnr-2000.offsets  cnr-2000.scc  cnr-2000.sccsizes  cnr-2000_edges.txt  test.ef  test.properties
examples/: bench_sort_pairs.rs  bench_swh_labels.rs  bench_unit_graph.rs  bench_unit_transpose.rs  bench_webgraph.rs  bfs.rs  bisect.rs  bv_bf_visit.rs  custom_codes.rs  custom_codes_bfs.rs  print.rs  swh_check_mph.rs  (+4 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: buffered_bit_stream_read.rs  buffered_bit_stream_reader.rs  buffered_bit_stream_write.rs  bvcomp_and_read.rs  codes.rs  mem_word_read.rs  mem_word_reader.rs  mem_word_write.rs  mem_word_write_vec.rs
webgraph/: CHANGELOG.md  Cargo.toml  README.md  coverage.py
webgraph/examples/: bench_arclist.rs  bench_sort_pairs.rs  bench_swh_labels.rs  bench_unit_graph.rs  bench_unit_transpose.rs  bfs.rs  custom_codes.rs  custom_codes_bfs.rs  degree_stats.rs  print.rs
webgraph/fuzz/: Cargo.toml
webgraph/fuzz/fuzz_targets/: bvcomp_and_read.rs  roundtrip.rs
webgraph/src/: lib.rs
webgraph/src/algo/: mod.rs
webgraph/src/algo/llp/: gap_cost.rs  label_store.rs  mod.rs  preds.rs
webgraph/src/fuzz/: bvcomp_and_read.rs  mod.rs  roundtrip.rs  utils.rs
webgraph/src/graphs/: arc_list_graph.rs  btree_graph.rs  csr_graph.rs  mod.rs  no_selfloops_graph.rs  par_graphs.rs  par_sorted_graph.rs  parallel_dcf_graph.rs  parallel_graph.rs  permuted_graph.rs  sorted_graph.rs  sorted_labeled_graph.rs  union_graph.rs  vec_graph.rs
webgraph/src/graphs/bvgraph/: load.rs  masked_iter.rs  mod.rs  offset_deg_iter.rs  random_access.rs  sequential.rs
webgraph/src/graphs/bvgraph/codecs/: dec_const.rs  dec_dbg.rs  dec_dyn.rs  dec_stats.rs  enc_const.rs  enc_dyn.rs  factories.rs  mod.rs  stats.rs
webgraph/src/graphs/bvgraph/comp/: bvcomp.rs  bvcompdp.rs  bvcompla.rs  bvcompz.rs  bvcompz2.rs  flags.rs  impls.rs  mod.rs
webgraph/src/graphs/random/: er.rs  mod.rs
webgraph/src/labels/: bitstream.rs  bitstream_comp.rs  mod.rs  proj.rs  store.rs  zip.rs
webgraph/src/labels/bitstream/: comp.rs  labeling.rs  mod.rs  store.rs
webgraph/src/traits/: bit_serde.rs  comp.rs  graph.rs  labels.rs  lenders.rs  mod.rs  par_map_fold.rs  serde.rs  split.rs  store.rs
webgraph/src/transform/: map.rs  mod.rs  perm.rs  simplify.rs  symmetrize.rs  transpose.rs
webgraph/src/utils/: circular_buffer.rs  csr_matrix.rs  granularity.rs  java_perm.rs  kmerge_iters.rs  matrix.rs  mmap_helper.rs  mod.rs  par_sort_graph.rs  par_sort_iters.rs  par_sort_pairs.rs  ragged_array.rs  sort_pairs.rs
webgraph/src/utils/batch_codec/: gaps.rs  grouped_gaps.rs  mod.rs
webgraph/src/visits/: mod.rs
webgraph/src/visits/breadth_first/: mod.rs  par_fair.rs  par_low_mem.rs  seq.rs
webgraph/src/visits/depth_first/: mod.rs  seq.rs
webgraph/tests/: test_arc_list_graph.rs  test_arclist_graph.rs  test_batch_codec.rs  test_bfs_order.rs  test_breadth_first.rs  test_btree_graph.rs  test_build_dcf.rs  test_bvcomp.rs  test_bvgraph_access.rs  test_bvgraph_roundtrip.rs  test_comp_flags.rs  test_core.rs  test_coverage.rs  test_csr_graph.rs  test_decoders.rs  test_depth_first.rs  test_factories_mmap.rs  test_fuzz.rs  test_graph_equality.rs  test_graph_types_coverage.rs  test_graph_wrappers.rs  test_into_pairs_drop.rs  test_iter.rs  test_labels_graphs.rs  test_labels_projections.rs  test_lenders.rs  test_offsets.rs  test_par_bvcomp.rs  test_parallel_labeling.rs  test_proj.rs  test_read_hc.rs  test_regression_le.rs  test_serde.rs  test_sort_merge.rs  test_transforms_coverage.rs  test_transpose.rs  test_utils_coverage.rs  test_vec_graph.rs  test_visits_coverage.rs  test_zip.rs
webgraph/tests/common/: mod.rs
(+321 files in other folders)
