[workspace]
resolver = "2"
members = [
    "algo", 
    "cli",
    "webgraph",
]

[workspace.dependencies]
webgraph = {path="./webgraph", version="0.2.1"}
webgraph-algo = {path="./algo", version="0.1.0"}

anyhow = { version = "1.0.79", features = ["backtrace"] }
epserde = "0.8.0"
dsi-bitstream = "0.5.0"
dsi-progress-logger = "0.8.1"
log = "0.4.22"
sux = "0.7.2"
common_traits = "0.11.2"
lender = "0.3.1"
rand = { version = "0.9.0", features = ["small_rng"] }
tempfile = "3.10.1"
itertools = "0.14.0"
rayon = "1.10.0"
mmap-rs = "0.6.1"
predicates = "3.1.2"
java-properties = "2.0.0"
env_logger = { version = "0.11.5", default-features = false, features = ["auto-color", "regex"] }
clap = { version = "4.5.11", features = ["derive", "string"] }

[profile.release]
opt-level = 3            # like --release
lto = "fat"              # Full LTO
overflow-checks = false  # Disable integer overflow checks.
debug = true             # Include debug info.
debug-assertions = false # Enables debug assertions.
codegen-units = 1        # slower compile times, but maybe better perf

[profile.bench]
opt-level = 3            # like --release
lto = "fat"              # Full LTO
overflow-checks = false  # Disable integer overflow checks.
debug = true             # Include debug info.
debug-assertions = false # Enables debug assertions.
codegen-units = 1        # slower compile times, but maybe better perf
