[workspace]
resolver = "2"
members = ["algo", "cli", "webgraph"]
# Exclude the fuzzing workspace from the main workspace, since it is not meant 
# to be built by default, nor run with `cargo t --all-targets`.
exclude = ["webgraph/fuzz"]

[workspace.dependencies]
webgraph = { path = "./webgraph" }
webgraph-algo = { path = "./algo" }
webgraph-cli = { path = "./cli" }

card-est-array = "0.2.0"
epserde = "0.12.0"
dsi-bitstream = "0.7.0"
dsi-progress-logger = "0.8.2"
sux = { version = "0.12.0", features = ["epserde", "rayon", "mmap"] }
common_traits = "0.12.0"
lender = "0.5.0"
log = "0.4.22"
num_cpus = "1.16.0"
anyhow = { version = "1.0.79", features = ["backtrace"] }
rand = "0.10.0"
tempfile = "3.10.1"
itertools = "0.14.0"
rayon = "1.10.0"
mmap-rs = "0.7.0"
predicates = "3.1.2"
java-properties = "2.0.0"
env_logger = { version = "0.11.5", default-features = false, features = [
    "auto-color",
    "regex",
] }
clap = { version = "4.5.11", features = ["derive", "string"] }
sync-cell-slice = "0.9.9"
arbitrary = { version = "1.3.2", features = ["derive"] }
serde = { version = "1.0.217", features = ["serde_derive"] }
serde_json = "1.0.137"
zstd = "0.13"
value-traits = "0.2.0"
thiserror = "2.0.12"
no-break = "0.1.2"
nonmax = "0.5.5"
crossbeam-utils = "0.8.21"
sysinfo = ">=0.35.0,<0.38"

[profile.release]
opt-level = 3 # like --release
#lto = "fat"              # Full LTO
overflow-checks = false  # Disable integer overflow checks.
debug = true             # Include debug info.
debug-assertions = false # Enables debug assertions.
#codegen-units = 1        # slower compile times, but maybe better perf

[profile.bench]
opt-level = 3            # like --release
lto = "fat"              # Full LTO
overflow-checks = false  # Disable integer overflow checks.
debug = true             # Include debug info.
debug-assertions = false # Enables debug assertions.
codegen-units = 1        # slower compile times, but maybe better perf
