[package]
name = "webgraph_algo"
version = "0.1.0"
edition = "2024"
description = "Algorithms for the Rust port of the WebGraph framework (http://webgraph.di.unimi.it/)."
repository = "https://github.com/vigna/webgraph-rs/"
license = "Apache-2.0 OR LGPL-2.1-or-later"
readme = "README.md"
keywords = ["graph", "compression", "codes", "webgraph"]
categories = ["compression", "data-structures", "algorithms"]
authors = [
	"Tommaso Fontana <tommaso.fontana.96@gmail.com>",
	"Matteo Dell'Acqua <dellacqua.matteo99@gmail.com>",
	"Sebastiano Vigna <sebastiano.vigna@unimi.it>",
]

[dependencies]
nonmax = "0.5.5"
rayon.workspace = true
sealed = "0.6.0"
sux.workspace = true
thiserror = "2.0.12"
parallel_frontier = "0.1.0"
webgraph.workspace = true
sync-cell-slice = "0.9.11"
anyhow.workspace = true
dsi-progress-logger.workspace = true
no-break = "0.1.2"
