[package]
name = "webgraph-algo"
version = "0.1.1"
edition = "2021"
description = "Algorithms for the Rust port of the WebGraph framework (http://webgraph.di.unimi.it/)."
repository = "https://github.com/vigna/webgraph-rs/"
license = "Apache-2.0 OR LGPL-2.1-or-later"
readme = "README.md"
keywords = ["graph", "compression", "codes", "webgraph"]
categories = ["compression", "data-structures", "algorithms"]
authors = [
	"Tommaso Fontana <tommaso.fontana.96@gmail.com>",
	"Matteo Dell'Acqua <dellacqua.matteo99@gmail.com>",
	"Sebastiano Vigna <sebastiano.vigna@unimi.it>",
]

[dependencies]
counter-array = { path = "../../counter-array-rs" }

nonmax = "0.5.5"
rayon.workspace = true
sealed = "0.6.0"
sux.workspace = true
thiserror = "2.0.12"
parallel_frontier = "0.1.0"
webgraph.workspace = true
sync-cell-slice = "0.9.11"
anyhow.workspace = true
dsi-progress-logger.workspace = true
no-break = "0.1.2"
lender = "0.3.1"
webgraph-cli = { version = "0.1.0", path = "../cli" }
rand.workspace = true
kahan = "0.1.4"
epserde.workspace = true
[dev-dependencies]
rand.workspace = true

[features]
slow_tests = []
