[package]
name = "webgraph_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.11", features = ["derive", "string"] }
clap_complete = { version = "4.4.11" }
env_logger = { version = "0.11.5", default-features = false, features = ["auto-color", "regex"] }
jiff = "0.2.5"
anyhow.workspace = true
epserde.workspace = true
dsi-bitstream.workspace = true
dsi-progress-logger.workspace = true
log.workspace = true
sux.workspace = true
common_traits.workspace = true
lender.workspace = true

[features]
default = ["be_bins", "le_bins"]
be_bins = [] # Enable read / write of only BE bvgraphs (to reduce code size)
le_bins = [] # Enable read / write of only LE bvgraphs (to reduce code size)

[[bin]]
name = "webgraph-cli"
path = "src/main.rs"

[lib]
name = "webgraph_cli"
path = "src/lib.rs"
