[package]
name = "webgraph_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
webgraph.workspace = true
anyhow.workspace = true
epserde.workspace = true
dsi-bitstream.workspace = true
dsi-progress-logger.workspace = true
log.workspace = true
sux.workspace = true
common_traits.workspace = true
lender.workspace = true
rand.workspace = true
tempfile.workspace = true
itertools.workspace = true
rayon.workspace = true
mmap-rs.workspace = true
predicates.workspace = true
java-properties.workspace = true
clap.workspace = true
clap_complete = { version = "4.4.11" }
env_logger.workspace = true
jiff = "0.2.5"
sysinfo = "0.33.1"

[build-dependencies]
built = { version = "0.7", features = ["git2"] }
chrono = "0.4.39"

[features]
default = ["be_bins", "le_bins"]
be_bins = [] # Enable read / write of only BE bvgraphs (to reduce code size)
le_bins = [] # Enable read / write of only LE bvgraphs (to reduce code size)
slow_tests = [] # Enable long-running tests

[[bin]]
name = "webgraph-cli"
path = "src/main.rs"

[lib]
name = "webgraph_cli"
path = "src/lib.rs"
