[package]
name = "webgraph-cli"
version = "0.1.0"
edition = "2021"
authors = [
	"Tommaso Fontana <tommaso.fontana.96@gmail.com>",
	"Sebastiano Vigna <sebastiano.vigna@unimi.it>",
]
repository = "https://github.com/vigna/webgraph-rs/"
description = "Command line interface of for the Rust port of the WebGraph framework (http://webgraph.di.unimi.it/)."
license = "Apache-2.0 OR LGPL-2.1-or-later"
readme = "README.md"
keywords = ["graph", "compression", "codes", "webgraph"]
categories = ["compression", "data-structures", "algorithms", "cli"]
default-run = "webgraph"

[dependencies]
webgraph.workspace = true
webgraph-algo.workspace = true
anyhow.workspace = true
epserde.workspace = true
dsi-bitstream.workspace = true
dsi-progress-logger.workspace = true
log.workspace = true
sux.workspace = true
common_traits.workspace = true
lender.workspace = true
card-est-array.workspace = true

rand.workspace = true
tempfile.workspace = true
itertools.workspace = true
rayon.workspace = true
mmap-rs.workspace = true
predicates.workspace = true
java-properties.workspace = true
clap.workspace = true
env_logger.workspace = true
zstd.workspace = true

jiff = "0.2.5"
sysinfo = "0.35.1"
clap_complete = { version = "4.4.11" }

[build-dependencies]
built = { version = "0.8", features = ["git2"] }
chrono = "0.4.39"

[features]
default = ["be_bins", "le_bins"]
be_bins = []                     # Enable read / write of only BE bvgraphs (to reduce code size)
le_bins = []                     # Enable read / write of only LE bvgraphs (to reduce code size)
slow_tests = []                  # Enable long-running tests

[[bin]]
name = "webgraph"
path = "src/main.rs"

[lib]
name = "webgraph_cli"
path = "src/lib.rs"
