[package]
name = "webgraph-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.webgraph]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "mem_word_read"
path = "fuzz_targets/mem_word_read.rs"
test = false
doc = false

[[bin]]
name = "buffered_bit_stream_read"
path = "fuzz_targets/buffered_bit_stream_read.rs"
test = false
doc = false

[[bin]]
name = "mem_word_write"
path = "fuzz_targets/mem_word_write.rs"
test = false
doc = false
