[package]
name = "webgraph-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
webgraph = {path = "..", features=["fuzz"]}

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "bvcomp_and_read"
path = "fuzz_targets/bvcomp_and_read.rs"
test = false
doc = false
