[package]
name = "webgraph-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
#libfuzzer-sys = { version = "*", package = "libafl_libfuzzer", features = ["introspection"], git = "https://github.com/AFLplusplus/LibAFL"}
arbitrary = { version = "1", features = ["derive"] }

[dependencies.webgraph]
path = ".."
features = ["fuzz"]

[[bin]]
name = "bvcomp_and_read"
path = "fuzz_targets/bvcomp_and_read.rs"
test = false
doc = false
bench = false
