[package]
name = "webgraph"
version = "0.3.0"
edition = "2021"
description = "A Rust port of the WebGraph framework (http://webgraph.di.unimi.it/)."
repository = "https://github.com/vigna/webgraph-rs/"
license = "Apache-2.0 OR LGPL-2.1-or-later"
readme = "README.md"
keywords = ["graph", "compression", "codes", "webgraph"]
categories = ["compression", "data-structures"]
authors = [
	"Tommaso Fontana <tommaso.fontana.96@gmail.com>",
	"Sebastiano Vigna <sebastiano.vigna@unimi.it>",
]

[features]
default = []
slow_tests = [] # Test feature that enables long running tests
fuzz = [
	"dep:arbitrary",
	"dep:zip",
	"dsi-bitstream/fuzz",
] # Expose the fuzzing harnesses
serde = ["dep:serde"]
be_bins = [] # Enable read / write of only BE bvgraphs (to reduce code size)
le_bins = [] # Enable read / write of only LE bvgraphs (to reduce code size)

[dependencies]
anyhow.workspace = true
epserde.workspace = true
dsi-bitstream.workspace = true
dsi-progress-logger.workspace = true
log.workspace = true
sux.workspace = true
common_traits.workspace = true
lender.workspace = true

rand.workspace = true
tempfile.workspace = true
itertools.workspace = true
rayon.workspace = true
mmap-rs.workspace = true
num_cpus.workspace = true
predicates.workspace = true
java-properties.workspace = true
sync-cell-slice.workspace = true
arbitrary = { workspace = true, optional = true }

libc = "0.2.155"
impl-tools = "0.10.0"
bitflags = "2.6.0"
dary_heap = "0.3.6"
rdst = { version = "0.20.14", features = ["multi-threaded"] }
sealed = "0.6.0"
serde = { workspace = true, optional = true }
crossbeam-channel = "0.5"

# Fuzzing deps
zip = { version = "4.0.0", optional = true }

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
env_logger.workspace = true
clap.workspace = true

[lib]
name = "webgraph"
path = "src/lib.rs"
